[#1] Missing stylesheet fix

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </p>
                 </div>
             </div>
-            <div class="contact">
+            <div class="proceed">
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfUoc1WLaC53W3wbo0vPgT7VAHJCNxvO_aIeNCBAc_zPsr2ig/viewform?usp=dialog">
                     Get yours now!
                 </a>
