[#1] Minor content modifications

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <header>
             <h1>Custom Programming Language Implementation</h1>
-            <p>I'll bring your language idea to life.</p>
+            <p>I'll bring your language idea to life (at a reasonable price).</p>
         </header>
         <section class="section">
             <h2>What you get:</h2>
