--- a/unavailable.html
+++ b/unavailable.html
@@ -9,6 +9,8 @@
 body {
     background: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url("/bg.png");
     background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     text-align: center;
     font-family: "DM Sans";
 }
