--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <style>
 
 body {
-    background: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url("/bg.png");
+    background: url("/bg.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
